<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:orientation="vertical"
    app:cardCornerRadius="2dp"
    app:cardElevation="2dp">

    <android.support.percent.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v4.view.ViewPager
            android:id="@+id/slider"
            app:layout_aspectRatio="178%"
            app:layout_widthPercent="100%" />


        <TextView
            android:id="@+id/title"
            style="@style/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/slider"
            android:layout_gravity="bottom"
            android:text="@string/title" />

        <TextView
            android:id="@+id/sub_title"
            style="@style/SubText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:text="@string/sub_title" />

        <ImageButton
            android:id="@+id/icon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignBottom="@id/sub_title"
            android:layout_alignParentRight="true"
            android:layout_marginRight="16dp"
            android:background="?attr/selectableItemBackground"
            android:src="@mipmap/ic_hot_tub_black_24dp" />

        <LinearLayout
            android:id="@+id/table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/sub_title"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/eat"
                    style="@style/TableHeader"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="start|center_vertical"
                    android:text="@string/eating" />

                <TextView
                    android:id="@+id/booking"
                    style="@style/TableHeader"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="start"
                    android:text="@string/cancel" />

                <android.support.v4.widget.Space
                    style="@style/TableContent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_below="@id/table"
            android:layout_marginLeft="16dp"
            android:drawableLeft="@mipmap/ic_info_outline_black_24dp"
            android:gravity="center"
            android:text="@string/last"
            android:textColor="@color/textSecondary" />

        <Button
            android:id="@+id/more"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_alignParentRight="true"
            android:layout_below="@id/table"
            android:layout_marginRight="16dp"
            android:text="@string/show_more" />


    </android.support.percent.PercentRelativeLayout>

</android.support.v7.widget.CardView>